--- a/src/app/layout/main/pages/main/main.component.html
+++ b/src/app/layout/main/pages/main/main.component.html
@@ -1,5 +1,7 @@
 <main-navbar></main-navbar>
 
-<div class="container">
+<div class="container site-content">
   <router-outlet></router-outlet>
 </div>
+
+<main-footer></main-footer>
