--- a/src/app/layout/main/components/navbar/navbar.component.scss
+++ b/src/app/layout/main/components/navbar/navbar.component.scss
@@ -6,7 +6,8 @@
 
   .site-title {
     font-size: 1.4rem;
-    font-weight: 500;
+    font-weight: 700;
+    cursor: pointer;
   }
 
   .site-menu {
@@ -16,6 +17,10 @@
     .site-menu-item {
       &:first-child {
         margin-right: 1rem;
+      }
+
+      a.active-link {
+        font-weight: 700;
       }
     }
   }
