--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  background: #f5f6f7;
 }
 
 a,
@@ -20,3 +19,5 @@ ul {
   margin: 0;
   list-style: none;
 }
+
+// Swiper
