--- a/src/app/modules/product/pages/product-detail/product-detail.component.html
+++ b/src/app/modules/product/pages/product-detail/product-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="col-10">
-    <div class="product-card">
+    <div *ngIf="productDetail" class="product-card">
       <img [src]="imageUrl" alt="" />
 
       <div class="content">
