--- a/src/app/ui/components/slider/slider.component.html
+++ b/src/app/ui/components/slider/slider.component.html
@@ -1,4 +1,5 @@
 <swiper
+  *ngIf="imgList"
   [slidesPerView]="slidesPerView"
   [spaceBetween]="spaceBetween"
   [pagination]="imgList.length > 1 ? true : false"
@@ -9,6 +10,6 @@
   (slideChange)="onSlideChange()"
 >
   <ng-template *ngFor="let img of imgList" swiperSlide
-    ><img [src]="img"
+    ><img [src]="convertUrl(img.image)" (click)="onClick(img)"
   /></ng-template>
 </swiper>
