--- a/src/app/ui/components/slider/slider.component.scss
+++ b/src/app/ui/components/slider/slider.component.scss
@@ -20,6 +20,7 @@
       object-fit: cover;
       border-radius: 1.2rem;
       box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+      cursor: pointer;
 
       @media (min-width: 992px) {
         max-height: 400px;
